# wedding-backend

./: LICENSE  pyproject.toml
migrations/models/: 0_20220311155804_init.sql  1_20220311161844_update.sql  2_20220311161845_uuid.sql  3_20220311162847_update.sql
src/: config.py  main.py  models.py
